test/libsolidity/syntaxTests/nameAndTypeResolution/continue_not_in_loop.sol
contract C {
    function f() public {
        if (true)
            continue;
    }
}
// ----
// SyntaxError: (69-77): "continue" has to be in a "for" or "while" loop.
